; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/watchdog/extr_txx9wdt.c_txx9wdt_open.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/watchdog/extr_txx9wdt.c_txx9wdt_open.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }
%struct.inode = type { i32 }
%struct.file = type { i32 }

@txx9wdt_alive = common dso_local global i32 0, align 4
@EBUSY = common dso_local global i32 0, align 4
@txx9wdt_reg = common dso_local global %struct.TYPE_2__* null, align 8
@TXx9_TMTCR_TCE = common dso_local global i32 0, align 4
@nowayout = common dso_local global i64 0, align 8
@THIS_MODULE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.inode*, %struct.file*)* @txx9wdt_open to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @txx9wdt_open(%struct.inode* %0, %struct.file* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.inode*, align 8
  %5 = alloca %struct.file*, align 8
  store %struct.inode* %0, %struct.inode** %4, align 8
  store %struct.file* %1, %struct.file** %5, align 8
  %6 = call i64 @test_and_set_bit(i32 0, i32* @txx9wdt_alive)
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %11

8:                                                ; preds = %2
  %9 = load i32, i32* @EBUSY, align 4
  %10 = sub nsw i32 0, %9
  store i32 %10, i32* %3, align 4
  br label %33

11:                                               ; preds = %2
  %12 = load %struct.TYPE_2__*, %struct.TYPE_2__** @txx9wdt_reg, align 8
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = call i32 @__raw_readl(i32* %13)
  %15 = load i32, i32* @TXx9_TMTCR_TCE, align 4
  %16 = and i32 %14, %15
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %18, label %22

18:                                               ; preds = %11
  %19 = call i32 @clear_bit(i32 0, i32* @txx9wdt_alive)
  %20 = load i32, i32* @EBUSY, align 4
  %21 = sub nsw i32 0, %20
  store i32 %21, i32* %3, align 4
  br label %33

22:                                               ; preds = %11
  %23 = load i64, i64* @nowayout, align 8
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %25, label %28

25:                                               ; preds = %22
  %26 = load i32, i32* @THIS_MODULE, align 4
  %27 = call i32 @__module_get(i32 %26)
  br label %28

28:                                               ; preds = %25, %22
  %29 = call i32 (...) @txx9wdt_start()
  %30 = load %struct.inode*, %struct.inode** %4, align 8
  %31 = load %struct.file*, %struct.file** %5, align 8
  %32 = call i32 @nonseekable_open(%struct.inode* %30, %struct.file* %31)
  store i32 %32, i32* %3, align 4
  br label %33

33:                                               ; preds = %28, %18, %8
  %34 = load i32, i32* %3, align 4
  ret i32 %34
}

declare dso_local i64 @test_and_set_bit(i32, i32*) #1

declare dso_local i32 @__raw_readl(i32*) #1

declare dso_local i32 @clear_bit(i32, i32*) #1

declare dso_local i32 @__module_get(i32) #1

declare dso_local i32 @txx9wdt_start(...) #1

declare dso_local i32 @nonseekable_open(%struct.inode*, %struct.file*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
